2015-2016/A/11/05/results.txt
Evaluating homework 05 on student 11 from A class


Evalutaing task1.c
	Test 1 passed
	Test 2 passed

Evalutaing task2.c
	Files can't compile (gcc err code:256)

	/home/sasho/programs/elsys/po-homework/2015-2016/A/11/05/task2.c: In function ‘main’:
/home/sasho/programs/elsys/po-homework/2015-2016/A/11/05/task2.c:47:19: warning: passing argument 1 of ‘next_generation’ makes integer from pointer without a cast [-Wint-conversion]
   next_generation(currentGen, nextGen, n);
                   ^
/home/sasho/programs/elsys/po-homework/2015-2016/A/11/05/task2.c:3:6: note: expected ‘int’ but argument is of type ‘int *’
 void next_generation(int current, int next, int length);
      ^
/home/sasho/programs/elsys/po-homework/2015-2016/A/11/05/task2.c:47:31: warning: passing argument 2 of ‘next_generation’ makes integer from pointer without a cast [-Wint-conversion]
   next_generation(currentGen, nextGen, n);
                               ^
/home/sasho/programs/elsys/po-homework/2015-2016/A/11/05/task2.c:3:6: note: expected ‘int’ but argument is of type ‘int *’
 void next_generation(int current, int next, int length);
      ^
/home/sasho/programs/elsys/po-homework/2015-2016/A/11/05/task2.c: In function ‘next_generation’:
/home/sasho/programs/elsys/po-homework/2015-2016/A/11/05/task2.c:70:18: error: subscripted value is neither array nor pointer nor vector
   else if(current[i-1] != current[i+1])
                  ^
/home/sasho/programs/elsys/po-homework/2015-2016/A/11/05/task2.c:70:34: error: subscripted value is neither array nor pointer nor vector
   else if(current[i-1] != current[i+1])
                                  ^
/home/sasho/programs/elsys/po-homework/2015-2016/A/11/05/task2.c:72:9: error: subscripted value is neither array nor pointer nor vector
     next[i]=1;
         ^
/home/sasho/programs/elsys/po-homework/2015-2016/A/11/05/task2.c:77:9: error: subscripted value is neither array nor pointer nor vector
     next[i]=0;
         ^
/home/sasho/programs/elsys/po-homework/2015-2016/A/11/05/task2.c:82:33: error: subscripted value is neither array nor pointer nor vector
  for(i=0; i<length; i++) current[i] = next[i];
                                 ^
/home/sasho/programs/elsys/po-homework/2015-2016/A/11/05/task2.c:82:43: error: subscripted value is neither array nor pointer nor vector
  for(i=0; i<length; i++) current[i] = next[i];
                                           ^


Summary

	task1 - 2/2
	task2 - 0/1 - error
